--- a/css/styles.css
+++ b/css/styles.css
@@ -283,7 +283,7 @@ main {
     height: var(--height-150);
 }
 
-.contact__button {
+.contact__button, #contact__button {
     margin-left: 250px;
     background-color: var(--coral);
     color: var(--primary-color);
