--- a/css/styles.css
+++ b/css/styles.css
@@ -38,6 +38,7 @@
     --margin-left-20: 20px;
     --margin-left-25: 25px;
     --margin-top-30: 30px;
+    --margin-top-40: 40px;
     --max-width-100: 100%;
     --standard-opacity: 0.8;
     --padding-10: 10px;
@@ -71,6 +72,7 @@ h1 {
 h2 {
     font-size: 24px;
     font-weight: var(--font-weight-700);
+    margin-top: var(--margin-top-40);
 }
 
 h3 {
