--- a/css/styles.css
+++ b/css/styles.css
@@ -16,7 +16,7 @@
     --border-bottom: 2px solid rgba(0, 0, 0, 0.3);
     --border-radius: 3px;
     --cursor-pointer: pointer;
-    --display-block: block;
+    --blockdisplay: block;
     --display-flex: flex;
     --display-grid: grid;
     --display-inline: inline;
@@ -35,6 +35,8 @@
     --margin-auto: auto;
     --margin-grid: 15px 140px 20px 140px;
     --margin-25: 25px;
+    --ml-auto: auto;
+    --mr-auto: auto;
     --margin-left-15: 15px;
     --margin-left-20: 20px;
     --margin-left-25: 25px;
@@ -344,8 +346,8 @@ main {
 }
 
 .center {
-    margin-left: var(--margin-auto);
-    margin-right: var(--margin-auto);
+    margin-left: var(--ml-auto);
+    margin-right: var(--mr-auto);
 }
 
 .github__button {
@@ -405,9 +407,11 @@ button:hover, button:focus {
     }
 
 svg {
-    max-width: 50%;
+    max-width: 25%;
     margin-top: 25px;
-    margin-left: var(--margin-left-20);
+    margin-left: var(--ml-auto);
+    margin-right: var(--mr-auto);
+    display: var(--blockdisplay);
 }
 
 
@@ -453,10 +457,9 @@ svg {
         height: 275px;
     }
 
-    svg {
+    /*svg {
         margin-top: 15px;
-        margin-left: 10px;
-    }
+    }*/
 }
 
 
@@ -502,10 +505,10 @@ svg {
         height: 200px;
     }
 
-    svg {
-        margin-top: 23px;
+    /*svg {
+      margin-top: var(--margin-top-50);
         margin-left: var(--margin-left-15);
-    }
+    }*/
 }
 
 
@@ -519,20 +522,10 @@ svg {
         grid-template-columns: var(--grid-template-columns);
     }
 
-    svg {
-        margin-top: var(--margin-top-30);
-        margin-left: var(--margin-left-20);
-    }
-
     .contact__item {
         height: var(--height-750);
     }
 }
-
-
-
-
-
 
 @keyframes sky-color-change {
     0% {
