--- a/css/styles.css
+++ b/css/styles.css
@@ -59,8 +59,6 @@ a {
     color: var(--secondary-color);
 }
 
-
-
 body {
     font-family: var(--font-family);
     font-weight: var(--font-weight-400);
@@ -98,9 +96,11 @@ a {
     color: var(--secondary-color);
 }
 
-a .github__button {
-  color: var(--coral);
-}
+    a:visited {
+        /* visited link */
+        color: var(--secondary-color);
+        opacity: var(--standard-opacity);
+    }
 
     a:hover, a:focus {
         /* No underlining when hovering over a link*/
@@ -209,7 +209,6 @@ main {
     flex-direction: column;
     text-align: var(--text-align-center);
     margin-bottom: 10px;
-    margin-top: 6rem;
 }
 
 
@@ -244,42 +243,30 @@ main {
     text-align: right;
 }
 
-.main-contact {
+.main-contact, .main-work {
     margin: 50px auto;
     display: var(--display-block);
     text-align: var(--text-align-center);
     width: var(--width-100);
-
-}
-
-.main-work {
-  margin: 50px auto;
-  display: var(--display-block);
-  text-align: var(--text-align-center);
-  width: var(--width-100);
-  max-height: 1000rem;
 }
 
 .grid {
     display: var(--display-grid);
     margin: var(--margin-grid);
     grid-template-columns: 750px 750px;
-    grid-template-rows: 50rem 45rem;
+    grid-template-rows: 325px 325px;
     grid-gap: var(--grid-gap);
     max-width: var(--max-width-100);
-
 }
 
 .grid__item {
     background-color: var(--secondary-color);
     color: var(--primary-color);
-    padding: 1.5rem 2rem;
+    padding: 25px;
     display: var(--display-inline-block);
     width: var(--width-100);
     justify-content: var(--justify-content-center);
-    height: 50.5rem;
 }
-
 
 
 .contact__grid {
@@ -368,8 +355,22 @@ main {
     margin-right: var(--mr-auto);
 }
 
-.project {
-  margin-bottom: 1rem;
+.github__button {
+    /* overwrites browser defaults and resets the border */
+    border: none;
+    /* takes the font from the outer container */
+    font-family: inherit;
+    /* styles the background color, font, color, and text decoration (underline, etc.) of the button */
+    background-color: var(--primary-color);
+    color: var(--coral);
+    text-decoration: var(--no-text-decoration);
+    /*adds spacing to the button*/
+    padding: 20px;
+    border-radius: var(--border-radius);
+    /* gives the button a bottom border with a width of 2px, a type of solid, and a color in RGBA format*/
+    border-bottom: var(--border-bottom);
+    margin-top: var(--mt-25);
+    margin-right: 100px;
 }
 
 button:hover, button:focus {
@@ -418,24 +419,6 @@ svg {
     display: var(--blockdisplay);
 }
 
-
-
-.github__button, .hosted__button {
-  /* overwrites browser defaults and resets the border */
-  border: none;
-  /* takes the font from the outer container */
-  font-family: inherit;
-  /* styles the background color, font, color, and text decoration (underline, etc.) of the button */
-  background-color: var(--primary-color);
-  color: var(--coral);
-  text-decoration: var(--no-text-decoration);
-  /*adds spacing to the button*/
-  padding: 20px;
-  border-radius: var(--border-radius);
-  /* gives the button a bottom border with a width of 2px, a type of solid, and a color in RGBA format*/
-  border-bottom: var(--border-bottom);  
-  margin: auto 3rem;
-}
 
 #contact__item-one {
     height: 700px;
