--- a/css/style.production.css
+++ b/css/style.production.css
@@ -740,6 +740,7 @@ svg {
 
   #contact__item-four {
       height: 275px;
+      margin-top: 4rem;
   }
 
   /*svg {
@@ -805,8 +806,8 @@ svg {
 
   
   .grid {
-      -ms-grid-columns: 1fr 20px 1fr;
-      grid-template-columns: 1fr 1fr;
+      -ms-grid-columns: 22.5rem 20px 22.5rem;
+      grid-template-columns: 22.5rem 22.5rem;
       display: -ms-grid;
       display: grid;
       margin: 0rem 0rem 0rem 0rem;
@@ -844,11 +845,11 @@ svg {
       grid-template-columns: 1fr 1fr 1fr;
       display: -ms-grid;
       display: grid;
-      margin: 0px 85px 5px 0px;
+      margin: 0px 85px 0rem 0px;
       -ms-grid-columns: 440px 20px 0px;
       grid-template-columns: 440px 0px;
-      -ms-grid-rows: 365px 20px 0px;
-      grid-template-rows: 365px 0px;
+      -ms-grid-rows: 2rem 20px 0px;
+      grid-template-rows: 2rem 0px;
       grid-gap: 20px;
       max-width: 665px;
   }
@@ -927,14 +928,14 @@ svg {
 
   #contact__item-three {
       height: 150px;
-      margin-top: 405px;
-      width: 925px;
+      margin-top: 0rem;
+      width: 54rem;
   }
 
   #contact__item-four {
       height: 200px;
       margin-top: 185px;
-      width: 925px;
+      width: 54rem;
   }
 
   .main-contact h1 {
@@ -947,11 +948,17 @@ svg {
   }
   
   #project-one #bulleted-list, #project-one .project {
-    margin-bottom: 2rem;
+    margin-bottom: 3rem;
+  }
+
+  #project-two .project img {
+    margin-left: 1rem;
   }
 
   #project-two .project {
     height: 18rem;
+    margin-bottom: 2rem;
+    width: 90%;
   }
 
   #project-three #bulleted-list {
@@ -960,10 +967,27 @@ svg {
 
   #project-three .project {
     margin-bottom: 2.5rem;
+    height: 27%;
   }
+
+  #project-four .project {
+    margin-bottom: 2.5rem;
+  }
+
+  #project-four #bulleted-list {
+    margin-bottom: 2rem;
+  }
+
+  #project-five p {
+    margin-bottom: 3.5rem;
+}
 
   #project-five #bulleted-list {
     margin-bottom: 3.5rem;
+}
+
+#project-five .project {
+  margin-bottom: 2.5rem;
 }
 
 #project-six #bulleted-list {
@@ -972,8 +996,12 @@ svg {
 }
 
 #project-six .project {
-height: 16rem;
+height: 12rem;
 width: 20rem;
+}
+
+#contact-social {
+margin-top: 20rem;
 }
 
   /*svg {
@@ -1003,12 +1031,42 @@ width: 20rem;
 
   .grid {
     margin: 1rem 1rem 10rem 1rem;
-    -ms-grid-rows: 63rem 20px 72rem;
-    grid-template-rows: 63rem 72rem;
+    -ms-grid-rows: 63rem 20px 65rem;
+    grid-template-rows: 63rem 65rem;
+  }
+
+  #project-one #bulleted-list {
+    margin-bottom: 3rem;
   }
 
   #project-one .project {
-    height: 14rem;
+    height: 17rem;
+    margin-bottom: 2.5rem;
+}
+
+#project-two #bulleted-list {
+  margin-bottom: 4rem;
+}
+
+#project-two .project {
+  margin-bottom: 4.5rem;
+}
+
+#project-three #bulleted-list {
+  margin-bottom: 1.5rem;
+}
+
+#project-three .project {
+  height: 16rem;
+  margin-bottom: 3rem;
+}
+
+#project-four #bulleted-list {
+  margin-bottom: 2rem;
+}
+
+#project-five #bulleted-list {
+  margin-bottom: 12.5rem;
 }
 
   .contact__item {
@@ -1058,7 +1116,7 @@ width: 20rem;
   }
 
   #project-six #bulleted-list {
-    margin-bottom: 8rem;
+    margin-bottom: 11rem;
 }
 
 @-webkit-keyframes sky-color-change {
